# test_mnn

./: CMakeLists.txt  main.cpp
mnn-2.2.0/: libMNN.dylib  libMNN_Express.dylib
yolox/: YOLOXMNN.cpp  YOLOXMNN.h  main.cpp
